<resources>
    <string name="app_name">Grigora Food</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="identification_proof">Identification Proof</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="continue_caps">Continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send">SEND</string>
    <string name="select_cuisine">Select Cuisine</string>
    <string name="no_order_available">No Order Available</string>
    <string name="restaurent_type">Restaurant Type</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="finish">FINISH</string>
    <string name="back">BACK</string>
    <string name="please_enter_address">Please enter your address...!</string>
    <string name="went_wrong">Something went wrong...!</string>
    <string name="ite_added_successfully">Item Added Successfully...!</string>
    <string name="enter_dish_name">Please enter dish name...!</string>
    <string name="please_enter_normal_price">Please enter normal price...!</string>
    <string name="please_enter_offer_price">Please enter offer price...!</string>
    <string name="please_enter_description">Please enter description...!</string>
    <string name="please_select_one_of_the_dish_type">Please select one of the dish type...!</string>
    <string name="please_select_one_of_the_category_type">Please select one of the category type...!</string>
    <string name="please_select_category_image">Please select dish image...!</string>
    <string name="please_enter_item_name">Please enter item name...!</string>
    <string name="please_enter_valid_email_address">Please enter valid email address...!</string>
    <string name="you_are_not_connected_with_internet">You are not connected with internet...!</string>
    <string name="loading">Loading....</string>
    <string name="send_email">Sending Email...</string>
    <string name="please_select_a_language">Please select a language...!</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="add_menu_item">Add Menu Item</string>
    <string name="add_new_category">Add New Category</string>
    <string name="add_new_item">Add New Item</string>
    <string name="dish_name">Dish Name</string>
    <string name="normal_price">Price</string>
    <string name="offer_price">Offer Price</string>
    <string name="small_description">Small Description</string>
    <string name="non_veg">Non Veg</string>
    <string name="contains_egg">Contains Egg</string>
    <string name="in_offer">In Offer</string>
    <string name="login_successfully">Login successfully...!</string>
    <string name="profile_completed_successfully">Profile Completed Successfully...!</string>
    <string name="please_enter_your_password">Please enter your password...!</string>
    <string name="please_enter_your_email_address">Please enter your email address or phone number...!</string>
    <string name="please_enter_your_full_name">Please enter your restaurant name...!</string>
    <string name="please_enter_your_contact_number">Please enter your contact number...!</string>
    <string name="please_enter_atleast_six_characters">Please enter atleast 6 characters...!</string>
    <string name="please_enter_confirm_password">Please enter confirm password...!</string>
    <string name="entered_password_is_not_matching">Entered password is not matching...!</string>
    <string name="please_select_your_proof_id_image">Please select your proof id image...!</string>
    <string name="order_accepted">Order accepted</string>
    <string name="load_cusins">Load Cuisine</string>
    <string name="check_internet">Please check internet connection and try again...!</string>
    <string name="edit_item">Edit Item</string>
    <string name="price">Price  ₦ </string>
    <string name="order_id">Order ID:&#160;</string>
    <string name="driver_acceptance">Waiting for driver acceptance for order id #</string>
    <string name="discount">Discount:</string>
    <string name="call">Call</string>
    <string name="sub_total">Sub Total:</string>
    <string name="forgot_success_msg">Please check your email for reset password</string>
    <string name="our_orders">Our Order</string>
    <string name="not_found">Not Found</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_to_log_out">Are you sure to log out</string>
    <string name="less_than_offer_price">Please enter offer price less than price...!</string>
    <string name="valid_price">Please enter valid price...!</string>
    <string name="valid_offer_price">Please enter valid offer price</string>
    <string name="enter_password">Please enter password...!</string>
    <string name="version_name">Version Name : </string>
    <string name="item_name">Item Name</string>
    <string name="description">Description</string>
    <string name="choose_category">Choose Cuisine</string>
    <string name="add_item_sub_ctaegory">Add Item sub-category</string>
    <string name="add_custom_category">+ Add custom category</string>
    <string name="enter_sub_category">Enter sub category</string>
    <string name="snacks">Snacks</string>
    <string name="create_category">Create category</string>
    <string name="selection_type">Selection Type : </string>
    <string name="single">Single</string>
    <string name="multiple">Multiple</string>
    <string name="type">Type</string>
    <string name="please_enter_item_price">Please enter item price</string>
    <string name="please_enter_item_description">Please enter item description</string>
    <string name="add_dish">Add Dishes</string>
    <string name="update_dish">Update Dish</string>
    <string name="update">Update</string>
    <string name="error_type_price_subcat">Please add at least one type and price of sub-category</string>
    <string name="error_subcat">Please fill all the field or remove it...!</string>
    <string name="dishes">Dishes</string>
    <string name="profile">Profile</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="search">Search dishes here..</string>
    <string name="item_base_price">Item Base Price</string>
    <string name="view_details">View Details</string>
    <string name="total_items">Total Items :</string>
    <string name="total">Total: </string>
    <string name="accept_order">Accept Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="qty">Quantity:</string>
    <string name="reset_password">Reset Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="offer_in_percentage">Offer (in percentage)</string>
    <string name="offer">Offers</string>
    <string name="offer_applied">Offer Applied</string>
    <string name="add_offer">Add \n Offer</string>
    <string name="rejected">Rejected</string>
    <string name="accepted">Accepted</string>
    <string name="date">Date : &#160; </string>
    <string name="time">Time :  &#160;</string>
    <string name="promo_apply">Promo is applied</string>
    <string name="quantity">Quantity </string>
    <string name="reset">Reset</string>
    <string name="required_fields">All Fields Are Required...!</string>
    <string name="update_profile">Update Profile Successfully...!</string>
    <string name="enter_preparing_time">Enter time in minutes</string>
    <string name="set_preparing_time">Set Preparing Time</string>
    <string name="set">Set</string>
    <string name="set_time_error">Please set time...!</string>
    <string name="order_details">Order Details</string>
    <string name="wallet_balance">Grigora Balance</string>
    <string name="bank_code">Bank Code</string>
    <string name="add">Add</string>
    <string name="note">Note</string>
    <string name="withdraw">Withdraw</string>
    <string name="empty">Empty</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="change_language">Change Language</string>
    <string name="submit">Submit</string>
    <string name="select_type">Select Type</string>
    <string name="complaint">Complaint</string>
    <string name="feedback">Feedback</string>
    <string name="Suggestions">Suggestions</string>
    <string name="refund">Refund</string>
    <string name="successfull">Successfull</string>
    <string name="your_request_successfully_send_to_admin">Your Request successfully send to Admin.</string>
    <string name="ok">Ok</string>
    <string name="please_select_type">Please Select Type...!</string>
    <string name="sending_request">Sending Request...</string>
    <string name="driver">Driver</string>
    <string name="contact_customer">Contact Customer</string>
    <string name="delivery_fee">Delivery Fee:</string>
    <string name="app_fee"> App Fee:</string>
    <string name="unathorized">Unauthorized!</string>
    <string name="your_id_might_be_login_other_device_n_login_again">Your password has been changed.  \n Login Again</string>
    <string name="again_login">Again login</string>
    <string name="account_number">Account Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_bank_code">Enter Bank Code</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="update_bank_details">Update Bank Details</string>
    <string name="add_account">Add Account</string>
    <string name="bank_details">Enter Bank Details</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add_amount">Add Amount</string>
    <string name="amount_is_required">Amount is required!</string>
    <string name="wecome_to_n_grigora">WELCOME TO GRIGORA</string>
    <string name="select_language">Select Language</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone">Enter Phone Number with country code</string>
    <string name="enter_pass">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="add_on_type_and_price">Add On Type and Price</string>
    <string name="enter_offer">Enter offer</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="did_nt_got_otp">Did\'nt got OTP ?</string>
    <string name="resend">Resend</string>
    <string name="select_reason">Select Reason</string>
    <string name="please_select_one_of_the_reason_to_cancel_your_order_this_reason_will_be_displayed_to_customer">Please select one of the reason to cancel your order. This reason will be displayed to customer</string>
    <string name="join_quiz">Join Quiz</string>
    <string name="quiz_of_the_day">Quiz of The Day</string>
    <string name="join_quiz_msg">By clicking on  "Join Quiz" your restaurant will be enroll under special offers which will be given to selected users</string>
    <string name="winner_will_get">Winner Will Get</string>
    <string name="please_wait_for_approval_from_admin">Please wait for approval from admin.</string>
    <string name="alert">Alert!</string>
    <string name="no_driver_assigned">No Driver Assigned</string>
    <string name="no_any_driver_has_been_accept_this_order_yet">No driver has accepted this order</string>
    <string name="okay">Okay</string>
</resources>