<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="@dimen/_12sdp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert"
        style="@style/semibold_text"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp"
        style="@style/medium_text"
        android:text="@string/please_wait_for_approval_from_admin"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/btn_ok"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/ok"
        style="@style/semibold_text"
        android:background="@color/colorAccent"
        android:textSize="@dimen/_11sdp" />
</LinearLayout>