<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        style="@style/semibold_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/_10sdp"
        android:text="@string/no_driver_assigned"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_msg"
        style="@style/regular_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/no_any_driver_has_been_accept_this_order_yet"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lightGrey" />

    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/_12sdp"
        android:text="@string/okay"
        android:textColor="@color/sky_blue"
        android:textSize="@dimen/_12sdp" />


</LinearLayout>