<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/offer_in_percentage"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/ed_offer_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@null"
            android:hint="@string/enter_offer"
            android:inputType="number"
            android:textColor="@color/dark_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/light_grey" />

        <TextView
            android:id="@+id/tv_save_offer"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_red_tl_bl_tweleve_dp"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.cardview.widget.CardView>