<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        style="@style/medium_text"
        android:gravity="center"
        android:text="@string/unathorized"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_15sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/tv_msg"
        style="@style/medium_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_15sdp"
        android:gravity="center"
        android:text="@string/your_id_might_be_login_other_device_n_login_again"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:id="@+id/btn_login"
        style="@style/medium_text"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_gravity="center_horizontal"
        android:text="@string/again_login"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:gravity="center"
        android:textAllCaps="false" />
</LinearLayout>