<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/set_preparing_time"
        android:textColor="@color/text_primary"
        style="@style/semibold_text"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/profile_edit">

        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent"
            android:background="@drawable/icon_profile_bg"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_clock" />

        <EditText
            android:id="@+id/ed_time"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@null"
            android:hint="@string/enter_preparing_time"
            android:inputType="time"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/text_primary" />

    </LinearLayout>

    <TextView
        android:id="@+id/set_time"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/btn_primary_rounded_back"
        android:gravity="center"
        android:text="@string/set"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_11sdp" />


</LinearLayout>