<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.login_signup.login_phone.OtpActivity">


    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="@dimen/_150sdp"

        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/img_otp" />

    <TextView
        style="@style/semibold_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/otp_verification"
        android:textSize="@dimen/_14sdp" />


    <com.mukesh.OtpView
        android:id="@+id/otp_view"
        style="@style/medium_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_25sdp"
        android:inputType="number"
        android:itemBackground="@color/white"
        android:textColor="@android:color/black"
        app:itemCount="6"
        app:lineColor="@color/text_primary"
        app:viewType="rectangle" />

    <Button
        android:id="@+id/buttonVerifyPhone"
        style="@style/semibold_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_48sdp"
        android:layout_marginBottom="8dp"
        android:elevation="1dp"
        android:textAllCaps="false"
        android:paddingLeft="@dimen/_22sdp"
        android:paddingRight="@dimen/_22sdp"
        android:text="@string/continue_caps"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/medium_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/did_nt_got_otp"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/buttonResend"
            style="@style/semibold_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:elevation="1dp"
            android:padding="8dp"
            android:text="@string/resend"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>