<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".reasons.RejectReasonsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/semibold_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/select_reason"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/light_grey" />
    </RelativeLayout>

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_12sdp"
        android:src="@drawable/reason_icon" />

    <TextView
        style="@style/medium_text"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center_horizontal"
        android:text="@string/please_select_one_of_the_reason_to_cancel_your_order_this_reason_will_be_displayed_to_customer"
        android:textColor="@color/text_primary" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@color/light_grey" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_reasons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:visibility="gone"
        android:id="@+id/btn_reason"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/submit" />
</LinearLayout>