<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:id="@+id/quiz_scrool"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/rl_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:background="@drawable/quiz_time">

            <ImageView
                android:id="@+id/iv_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_menu"
                android:tint="@color/white" />

            <TextView
                style="@style/semibold_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/quiz_of_the_day"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_quiz_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_toolbar"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:gravity="center"
            style="@style/semibold_text"
            android:text="@string/join_quiz_msg"
            android:textColor="@color/textBlack"
            android:textSize="@dimen/_12sdp" />

        <RelativeLayout
            android:id="@+id/rl_msg"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_150sdp"
            android:layout_below="@+id/tv_quiz_msg"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/offer_bg">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    style="@style/semibold_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/winner_will_get"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp" />

                <TextView
                    android:id="@+id/tv_off"
                    style="@style/semibold_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_25sdp"
                    android:textStyle="bold" />


            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/btn_join"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_msg"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/join_quiz"
            android:textAllCaps="false"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_90sdp"
            android:layout_below="@+id/btn_join"
            android:src="@drawable/bubbles"
            android:layout_marginTop="@dimen/_65sdp"
            android:visibility="visible" />


    </RelativeLayout>
</ScrollView>